--- a/DAY-7/Frontend/package.json
+++ b/DAY-7/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.13.0",
     "saas": "^1.0.0"
   },
   "devDependencies": {
